# yes-master

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
apps/iphone/src-tauri/: Cargo.toml  tauri.conf.json
apps/iphone/src-tauri/src/: lib.rs  main.rs
apps/iphone/src-tauri/tests/: iphone_backend.rs
docs/: ALBUM_MASTER_PLAN.md  APP_BEHAVIOR.md  ARCHITECTURE.md  CLAUDE_WORK_LOOP.md  CLOSEOUT_2026-05-26.md  CODEX_ADVERSARIAL_REVIEW_2026-05-29.md  CODEX_COMBINATION_AUDIT_2026-05-13.md  CODEX_WIRING_REVIEW_2026-05-27.md  DANDOFF_2026-05-20.md  HANDOFF.md  HANDOFF_2026-05-12.md  HANDOFF_2026-05-12_night.md  HANDOFF_2026-05-14_session.md  HANDOFF_2026-05-15_evening.md  HANDOFF_2026-05-15_session.md  HANDOFF_2026-05-18_evening.md  HANDOFF_2026-05-19_evening.md  HANDOFF_2026-05-27_UI_AND_CLEANUP.md  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: private_fixture_matrix.rs  private_reference_tuning.rs  produce_dialog_smoke.rs
src-tauri/src/: album.rs  album_render.rs  analysis.rs  audio.rs  decode.rs  dsp.rs  engine.rs  exports.rs  files.rs  fixture_matrix.rs  jobs.rs  lib.rs  main.rs  project.rs  reference_tuning.rs  sample_rate.rs  settings.rs  sources.rs  spectrum.rs  types.rs  wav_writer.rs
src-tauri/tests/: album_arc_trace.rs  album_character_bias.rs  album_plan_landing.rs  album_render.rs  album_sample_rate.rs  album_simple_landing.rs  contracts.rs  delivery_profile_render.rs  dither_absence_of_harmonics.rs  export_volume_match.rs  preset_distinctness.rs  preset_loudness_balance.rs  preset_signature.rs
(+63 files in other folders)
