[package]
name = "yes-master-iphone"
version = "0.1.0"
description = "YES Master iPhone"
authors = ["Daniel Kinsner"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yes_master_iphone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
yes_master_lib = { package = "yes-master", path = "../../../src-tauri" }

[dev-dependencies]
hound = "3"
tempfile = "3"
